# smoothiepy

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: build-upload-release.yml  ci-pipeline.yml  publish-pypi.yml
smoothiepy/: __init__.py  core.py  signal_filter.py  signal_smoother.py  signal_smoother_builder.py
smoothiepy/filter/: basefilter.py  filter1d.py  filter2d.py  filter2d_naive.py
smoothiepy/smoother/: builder.py  smoother.py
src/: main.py  signal_filter.py  signal_smoother.py  signal_smoother_builder.py
tests/: test_signal_filter.py
tests/filter/: test_base_filter.py  test_filter2d.py  test_filter2d_naive.py
