[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "smoothiepy"
version = "0.1.0"
authors = [
    {name = "Timo Seyfarth", email = "timo@seyfarth.dev"}
]
description = "A lightweight Python library for smoothing real-time data streams like eye tracking or sensor input."
readme = "README.md"
requires-python = ">=3.9.0"
license = {text = "MIT"}
keywords = ["python", "smoothing", "real-time", "signal-processing", "data-stream", "eye-tracking", "gaze-tracking", "sensor-data",
    "noise-reduction", "data-smoothing", "low-latency", "live-data", "adaptive-filter", "kalman-filter", "ema", "moving-average", "smoothiepy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
dependencies = [

]

[tool.pdm]
distribution = false

[project.optional-dependencies]
dev = [
    "pytest~=8.3.5",
    "pylint>=3.3.7",
]

#[project.urls]
#Homepage = "https://github.com/yourusername/my_project"
#Source = "https://github.com/yourusername/my_project"
#Documentation = "https://github.com/yourusername/my_project#readme"

[tool.pytest.ini_options]
addopts = "-v --color=yes"
python_files = "test_*.py"
pythonpath = [
  "."
]

[tool.pylint.master]
ignore = ["tests", ".venv"]
ignore-patterns = ["test_.*\\.py$", ".*_test\\.py$"]
init-hook = "import sys; sys.path.append('./')"
jobs = 4

[tool.pylint.'MESSAGES CONTROL']
disable = [
  "too-few-public-methods",
  "too-many-arguments",
  "too-many-positional-arguments",
  "no-member",
  "too-many-instance-attributes",
  "fixme"
]

[tool.pylint.similarities]
min-similarity-lines = 5
ignore-comments = true
ignore-docstrings = true
ignore-imports = false

[tool.pylint.basic]
docstring-min-length = 10

[tool.pylint.format]
max-line-length = 100
ignore-long-lines = "^\\s*(# )?<https?://\\S+>?$|^\\s*(from\\s+\\S+\\s+)?import\\s+.+$"
indent-string = "    "
indent-after-paren = 4
