[build-system]
requires = ["pdm-backend >= 2.4.4"]
build-backend = "pdm.backend"

[project]
name = "smoothiepy"
version = "0.1.0"
authors = [
    {name = "Timo Seyfarth", email = "timo@seyfarth.dev"}
]
description = "Smooth real-time data streams like eye tracking or sensor input with this lightweight package."
readme = "README.md"
requires-python = ">=3.10.0"
license = "LGPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
keywords = [
    # Core themes
    "smoothing", "data-smoothing", "signal-filter", "signal-processing", "noise-reduction",
    "real-time", "low-latency", "live-data", "online-processing", "streaming-data",
    "data-cleaning", "data-filtering", "preprocessing", "adaptive-filter",
    "ema", "moving-average", "median-filter", "gaussian-smoothing",

    # Time series and general analytics
    "time-series", "trend-analysis", "rolling-average", "forecasting", "financial-data",
    "stock-market", "price-smoothing", "volatility-reduction", "algorithmic-trading",
    "market-data", "quantitative-analysis", "data-denoising",

    # Gaze & input tech
    "eye-tracking", "gaze-tracking", "gaze-analysis", "saccade-filtering", "fixation-detection",
    "attention-analysis", "input-smoothing", "cursor-smoothing", "head-tracking",
    "sensor-data", "tracking-noise", "motion-smoothing", "imu-data", "robotics",
    "embedded-systems", "wearable-sensors", "biosignal-processing", "hci", "bci",
    "gesture-recognition", "computer-vision", "biometrics",

    # ML / scientific use
    "machine-learning", "feature-extraction", "data-preparation", "computational-neuroscience",
    "neurotechnology", "psychophysics", "real-time-processing", "live-inference",

    # Technical/meta
    "python", "smoothiepy", "signal-analysis", "time-series-preprocessing"
]


classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "numpy>=2.1.0",
]

[tool.pdm]
distribution = true

[project.optional-dependencies]
dev = [
    "pytest~=8.3.5",
    "pylint>=3.3.7",
]

[project.urls]
Homepage = "https://github.com/timoseyfarth/smoothiepy"
Documentation = "https://github.com/timoseyfarth/smoothiepy/wiki"
Issues = "https://github.com/timoseyfarth/smoothiepy/issues"

[tool.pytest.ini_options]
addopts = "-v --color=yes"
python_files = "test_*.py"
pythonpath = [
    "."
]

[tool.pylint.master]
ignore = ["tests", ".venv"]
ignore-patterns = ["test_.*\\.py$", ".*_test\\.py$", "__init__\\.py$"]
init-hook = "import sys; sys.path.append('./')"
jobs = 4

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-positional-arguments",
    "no-member",
    "too-many-instance-attributes",
    "fixme",
    "import-error"
]

[tool.pylint.similarities]
min-similarity-lines = 5
ignore-comments = true
ignore-docstrings = true
ignore-imports = false

[tool.pylint.basic]
docstring-min-length = 10

[tool.pylint.format]
max-line-length = 100
ignore-long-lines = "^\\s*(# )?<https?://\\S+>?$|^\\s*(from\\s+\\S+\\s+)?import\\s+.+$"
indent-string = "    "
indent-after-paren = 4
